# setup-soldr

./: .coderabbit.yaml  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  action.yml  comparison.toml  lessons.md  package-lock.json  package.json  tsconfig.json
.github/actions/comparison-zccache/: action.yml
.github/actions/setup-soldr/: detect_shared_target_warning.py  ensure_rust_toolchain.py  ensure_soldr.py  log_utils.py  normalize_source_mtime.py  phase_timing.py  resolve_setup.py  verbose_soldr_wrapper.py  verify_soldr.py
.github/actions/setup-soldr-cache-compress/: .gitignore  README.md  action.yml  package-lock.json  package.json
.github/actions/setup-soldr-cache-compress/__tests__/: main.test.js  post.test.js
.github/actions/setup-soldr-cache-compress/src/: main.js  post.js
.github/scripts/: comparison_report.py
.github/workflows/: _comparison-build.yml  _comparison-scenario.yml  bench-cache-modes.yml  comparison-child-branch.yml  comparison-cluster.yml  lint-vendor-prose.yml  mac-cross.yml  rust-ci.yml  setup-soldr-action.yml  setup-soldr-contract.yml  update-v0-tag.yml  zccache-build-demo.yml
__tests__/: bench-paths.test.ts  bench-scripts.test.ts  cache-compress.test.ts  cache-encrypt.test.ts  cache-eviction.test.ts  cache-keys.test.ts  cleanup.test.ts  compile-cache-stats.test.ts  compile-journal.test.ts  cook-action.test.ts  cook-cache.test.ts  cross-bootstrap.test.ts  detect-musl-cc.test.ts  detect-shared-target-warning.test.ts  diagnostics.test.ts  dry-run.test.ts  dylint-nightly.test.ts  ensure-rust-toolchain.test.ts  ensure-shims.test.ts  ensure-soldr.test.ts  install-passthrough.test.ts  loader.mjs  log-utils.test.ts  main.test.ts  normalize-source-mtime.test.ts  phase-timing.test.ts  post.test.ts  raw-inputs.test.ts  register-loader.mjs  release-readiness.test.ts  resolve-setup.test.ts  seed-isolated-cache.test.ts  shim-bypass-check.test.ts  shutdown-cache.test.ts  soldr-load-shim.test.ts  soldr-mini-cache.test.ts  soldr-toolchain-client.test.ts  solo-toolchain-cache.test.ts  source-mtime-snapshot.test.ts  toolchain-snapshot.test.ts  (+4 more)
benchmarks/sqlite-native/: Cargo.toml
benchmarks/sqlite-native/src/: main.rs
benchmarks/workspace-scale/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0001/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0001/src/: README.md  lib.rs
benchmarks/workspace-scale/crates/heavy-leaf-0002/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0002/src/: lib.rs
benchmarks/workspace-scale/crates/heavy-leaf-0003/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0004/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0005/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0006/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0007/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0008/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0009/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0009/src/: README.md
benchmarks/workspace-scale/crates/heavy-leaf-0010/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0011/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0012/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0013/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0014/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0015/: Cargo.toml  README.md
benchmarks/workspace-scale/crates/heavy-leaf-0015/src/: lib.rs
cleanup/: action.yml
cook/: action.yml
scripts/: bench-cache-cell.mjs  bench-paths.d.mts  bench-paths.mjs  bench-real-cache-smoke.mjs  bundle-entrypoint.mjs  cascade-setup-soldr.py  check-default-release-readiness.mjs  collate-bench.mjs  expand-bench-matrix.mjs  lint-vendor-prose.mjs  render-bench-summary.mjs
scripts/bench-workloads/: README.md
scripts/bench-workloads/demo-small/: Cargo.toml
scripts/bench-workloads/demo-small/src/: main.rs
src/: cleanup.ts  cook-post.ts  cook.ts  main.ts  post.ts
src/lib/: build-outputs.ts  cache-compress.ts  cache-encrypt.ts  cache-eviction.ts  cache-keys.ts  cleanup-inputs.ts  compile-cache-stats.ts  compile-journal.ts  cook-cache.ts  cross-bootstrap.ts  deferred-cook.ts  detect-musl-cc.ts  detect-shared-target-warning.ts  diagnostics.ts  dylint-nightly.ts  ensure-rust-toolchain.ts  ensure-shims.ts  ensure-soldr.ts  fetch-release.ts  input-parsers.ts  install-passthrough.ts  log-utils.ts  normalize-source-mtime.ts  phase-timing.ts  python-json.ts  raw-inputs.ts  release-readiness.ts  resolve-setup.ts  seed-isolated-cache.ts  shim-bypass-check.ts  shutdown-cache.ts  soldr-load-shim.ts  soldr-mini-cache.ts  soldr-toolchain-client.ts  solo-toolchain-cache.ts  source-mtime-snapshot.ts  stats-collector.ts  toolchain-snapshot.ts  toolchain.ts  types.ts  (+2 more)
tests/: test_action_python_entrypoints.py  test_action_target_cache_wiring.py  test_bench_cache_modes_workflow.py  test_cache_compress_action_manifest.py  test_detect_shared_target_warning.py  test_ensure_rust_toolchain_refresh.py  test_ensure_soldr_release_resolution.py  test_ensure_soldr_source_ref.py  test_no_jobserver_env_leak.py  test_normalize_source_mtime.py  test_phase_timing.py  test_release_rollout_contract.py  test_resolve_setup_build_cache_key_v2.py  test_resolve_setup_build_cache_mode.py  test_resolve_setup_cargo_registry.py  test_resolve_setup_lockfile_only_restore_key.py  test_resolve_setup_target_cache_compression.py  test_resolve_setup_target_cache_profile.py  test_resolve_setup_target_cache_pruning_inputs.py  test_resolve_setup_toolchain_resolution.py  test_rust_ci_workflow.py  test_verbose_soldr_wrapper.py  test_zccache_build_demo_workflow.py
