# Seed shape — one leaf crate with heavy deps so a release build
# produces ~2 GiB target/. Subsequent PRs grow members[] toward the
# fbuild-scale target where target/ exceeds GHA's 10 GiB cache cap and
# Swatinem/rust-cache can no longer save.
[workspace]
resolver = "2"
members = [
    "crates/heavy-leaf-0001",
    "crates/heavy-leaf-0002",
    "crates/heavy-leaf-0003",
    "crates/heavy-leaf-0004",
    "crates/heavy-leaf-0005",
    "crates/heavy-leaf-0006",
    "crates/heavy-leaf-0007",
    "crates/heavy-leaf-0008",
    "crates/heavy-leaf-0009",
    "crates/heavy-leaf-0010",
    "crates/heavy-leaf-0011",
    "crates/heavy-leaf-0012",
    "crates/heavy-leaf-0013",
    "crates/heavy-leaf-0014",
    "crates/heavy-leaf-0015",
]
