[package]
name = "heavy-leaf-0002"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling of heavy-leaf-0001 with a deliberately different dep tail —
# `reqwest` + `rustls` + `hyper` pull in a different transitive
# subgraph (rustls webpki + ring, rather than just hyper's existing
# stack) so the two leaves don't share as much of their compiled
# output. That widens the workspace-scale `target/` growth per leaf
# without inflating the cargo registry baseline as fast (because
# `reqwest` shares many crates with `axum`/`hyper` already pulled in
# by `heavy-leaf-0001`).
[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
regex = "1"
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
