[package]
name = "heavy-leaf-0003"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling leaf with a CLI / compression / archiver dep subgraph —
# `clap` (with derive), `zstd`, `tar`, `flate2`, `bytes`. Overlaps
# heavy-leaf-0001/0002 on serde, tracing, regex, anyhow, but pulls
# in distinct transitive subgraphs for the archive / compression
# families that neither sibling exercises.
[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
regex = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
zstd = "0.13"
tar = "0.4"
flate2 = "1"
bytes = "1"
indicatif = "0.17"
crossbeam-channel = "0.5"
rayon = "1"
