[package]
name = "heavy-leaf-0005"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling leaf with a parsers / grammar / AST subgraph: nom,
# winnow, pest + pest_derive, syn + quote + proc-macro2 (heavy
# proc-macro graph), chumsky. These pull a noticeably different
# transitive set from the prior four leaves' webframework /
# compression / math subgraphs. Pure-Rust deps; no cc-rs build
# scripts.
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
nom = "7"
winnow = "0.6"
pest = "2"
pest_derive = "2"
syn = { version = "2", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
chumsky = "0.9"
ariadne = "0.5"
logos = "0.15"
phf = { version = "0.11", features = ["macros"] }
strum = { version = "0.27", features = ["derive"] }
