[package]
name = "heavy-leaf-0006"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling leaf with a pure-Rust cryptography / hashing subgraph
# from RustCrypto + dalek: sha2, blake2, blake3, md-5, hmac, hkdf,
# pbkdf2, argon2, scrypt, aes + aes-gcm, chacha20poly1305,
# ed25519-dalek + curve25519-dalek + x25519-dalek, signature.
# Heavy generic + trait machinery; pulls a distinct transitive
# set from the prior five web / http-client / cli / math / parser
# subgraphs. No cc-rs build scripts (ring / rusqlite / libpq
# avoided on purpose).
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = "1"
md-5 = "0.10"
digest = "0.10"
hmac = "0.12"
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
argon2 = "0.5"
scrypt = "0.11"
aes = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
curve25519-dalek = "4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
signature = "2"
rand_core = "0.6"
