[package]
name = "heavy-leaf-0007"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling leaf with a pure-Rust serialization-formats + time/ID
# subgraph: toml, serde_yaml, quick-xml, roxmltree, csv,
# ciborium, postcard, rkyv (with `bytecheck` derive macros),
# rmp-serde, serde_with, time, chrono, jiff, uuid, ulid. Heavy
# serde-derive expansion and proc-macro surface; distinct from
# the prior six leaves' web / http-client / cli / math / parser /
# crypto subgraphs. No cc-rs build scripts.
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
toml = "0.8"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
roxmltree = "0.20"
csv = "1"
ciborium = "0.2"
postcard = { version = "1", features = ["use-std"] }
rkyv = { version = "0.7", features = ["validation"] }
rmp-serde = "1"
serde_with = { version = "3", features = ["chrono", "json", "macros"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }
jiff = { version = "0.1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ulid = { version = "1", features = ["serde"] }
