[package]
name = "heavy-leaf-0011"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling leaf with a pure-Rust templating + markdown subgraph:
# handlebars, tera, askama + askama_derive, minijinja (with
# loader + json + macros), ramhorns + ramhorns-derive,
# pulldown-cmark (markdown), comrak (alternate markdown with
# extensions + footnotes + table + tasklist), html5ever
# (HTML5 parser), markup5ever. Heavy proc-macro graph
# distinct from the prior ten leaves' web / http-client / cli /
# math / parser / crypto / serialization / storage /
# text-Unicode / graphics subgraphs. No cc-rs build scripts.
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
handlebars = "6"
tera = "1"
askama = "0.12"
askama_derive = "0.12"
minijinja = { version = "2", features = ["loader", "json", "macros", "multi_template", "internal_debug"] }
ramhorns = "1"
ramhorns-derive = "1"
pulldown-cmark = "0.12"
comrak = { version = "0.31", features = ["shortcodes"] }
html5ever = "0.29"
markup5ever = "0.14"
