[package]
name = "heavy-leaf-0012"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling leaf with a pure-Rust TUI + syntax-highlighting
# subgraph: ratatui (with widgets + crossterm backend),
# crossterm, tui-textarea, tui-tree-widget, syntect
# (fancy-regex variant — onig avoided to stay pure-Rust),
# syntect-tui, termion (alt backend), console, supports-color,
# supports-hyperlinks, supports-unicode, vt100 (terminal-emulator
# parser). Heavy regex + finite-state graphs distinct from the
# prior eleven leaves' subgraphs. No cc-rs build scripts.
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
ratatui = { version = "0.29", features = ["serde", "macros", "all-widgets", "unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["serde", "event-stream"] }
tui-textarea = "0.7"
tui-tree-widget = "0.23"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
syntect-tui = "3"
termion = "4"
console = "0.15"
supports-color = "3"
supports-hyperlinks = "3"
supports-unicode = "3"
vt100 = "0.15"
