[package]
name = "heavy-leaf-0013"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling leaf with a pure-Rust git (gitoxide) + filesystem
# tooling subgraph. `gix` is a facade over ~40 sub-crates
# (gix-config, gix-hash, gix-object, gix-odb, gix-pack,
# gix-protocol, gix-ref, gix-revwalk, gix-status, gix-worktree,
# gix-traverse, gix-transport, gix-index, gix-mailmap,
# gix-features, gix-attributes, gix-pathspec, gix-glob, etc.) —
# adding one direct dep here pulls a substantial distinct
# transitive set. Layered on top: `ignore` (gitignore semantics),
# `walkdir`, `jwalk` (parallel walkdir), `globset`, `fs-err`
# (better fs::* error wrappers), `tempfile`, `notify` (FS
# watcher), `dunce` (Windows path canonicalization),
# `semver` (version parsing), `git-conventional`
# (Conventional Commits parser). Distinct from the prior twelve
# leaves' subgraphs. No cc-rs build scripts (libgit2 / git2 / git2-curl
# avoided to stay pure-Rust).
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
gix = { version = "0.66", default-features = false, features = ["max-performance-safe", "serde", "blob-diff", "blocking-network-client", "revision", "status", "worktree-mutation", "interrupt", "credentials", "command", "parallel"] }
ignore = "0.4"
walkdir = "2"
jwalk = "0.8"
globset = "0.4"
fs-err = "3"
tempfile = "3"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
dunce = "1"
semver = { version = "1", features = ["serde"] }
git-conventional = "0.12"
