[package]
name = "heavy-leaf-0014"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

# Sibling leaf with a pure-Rust observability / metrics / tracing
# subgraph: opentelemetry (with trace, metrics, logs),
# opentelemetry_sdk (with rt-tokio, trace, metrics, logs),
# opentelemetry-stdout, opentelemetry-semantic-conventions,
# tracing-opentelemetry, tracing-tree, tracing-error,
# tracing-appender (rolling file log appender), metrics,
# metrics-util, metrics-exporter-prometheus, prometheus,
# prometheus-client, sentry (with rustls backend — native-tls
# avoided). Heavy proc-macro graph distinct from the prior
# thirteen leaves' subgraphs. No cc-rs build scripts (native-tls
# / openssl avoided).
[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"
opentelemetry = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics", "logs", "testing"] }
opentelemetry-stdout = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"
tracing-tree = "0.4"
tracing-error = "0.2"
tracing-appender = "0.2"
metrics = "0.24"
metrics-util = "0.18"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
prometheus = { version = "0.13", default-features = false }
prometheus-client = "0.22"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest"] }
